testsuite/tests/rename/should_fail/T19843f.hs
module T19843f where

import Prelude (Int, map)

data A = A {mop :: ()}
data Mup = Mup

foo = foo {mup = 1}

bar = A {mup = 1}
