testsuite/tests/rename/should_fail/T19843f.stderr

T19843f.hs:8:12: error: [GHC-22385]
    Not in scope: record field ‘mup’
    Suggested fix: Perhaps use record field of A ‘mop’ (line 5)
